import { useState, useCallback} from 'react';
import { useFocusEffect } from '@react-navigation/native';
import { Button, IconButton, Portal, Dialog } from 'react-native-paper';
import { ScrollView, Image, Linking, ViewStyle, StyleProp, ImageBackground, PixelRatio } from 'react-native';
import CustomText from '../assets/CustomText';
import { View, Pressable } from 'react-native';
import Constants from 'expo-constants';
import GlobalStyles from '../style/GlobalStyles';

import { useSecurityContext } from '../helper/SecurityContext';
import { useAppContext } from '../helper/AppContext';
import { authModule } from '../helper/AuthModule';
import { screenFlowModule } from '../helper/ScreenFlowModule';
import { useTheme, Card } from 'react-native-paper';
import Grid from '../helper/GridLayout';
import CustomGrid from '../helper/CustomGrid';
import * as LucideIcons from 'lucide-react-native';

import { useDataContext } from '../helper/DataContext';
import { ServiceData } from '../types/AppTypes';

import AsyncStorage from '@react-native-async-storage/async-storage';

//menu icons
import defaultIcon from '../assets/new_menuicons/menu-default.png';
import formIcon from '../assets/new_menuicons/menu-forms.png';
import resourcesIcon from '../assets/new_menuicons/menu-resources.png';
import skillsMaintIcon from '../assets/new_menuicons/menu-skills-maint.png';
import trainingIcon from '../assets/new_menuicons/menu-training.png';
import allServicesIcon from "../assets/new_menuicons/menu-all-services.png";
import annualInventoryCheckIcon from '../assets/new_menuicons/menu-annual-inventory-check.png';
import idCardReplacementIcon from '../assets/new_menuicons/menu-id-card-replacement.png';
import maintenanceIcon from '../assets/new_menuicons/menu-maintenance.png';
import manageMembersIcon from '../assets/new_menuicons/menu-manage-members2.png';
import membershipDeregistrationIcon from '../assets/new_menuicons/menu-membership-deregistration.png';
import uniformReplacementIcon from '../assets/new_menuicons/menu-uniform-replacement.png';
import unitDetailsIcon from '../assets/new_menuicons/menu-unit-details.png';
import practicalTrainingRegistrationIcon from '../assets/new_menuicons/menu-practical-training-registration.png';
import menuEquipmentRepair from '../assets/new_menuicons/menu-equipment-repair.png';

import headerBg from "../assets/images/header-bg-transparent.png";


import { dataHandlerModule } from '../helper/DataHandlerModule';
import { OktaLoginResult } from '../types/AppTypes';
import { StatusBar } from 'expo-status-bar';

const Services = () => {
    const theme = useTheme();
    const appContext = useAppContext();
    const { services, setCurrentProfile, setVolAdminMembersSearchFilter, currentUser, volAdminLastSelectedOrgUnit, setOrgUnitTeamMembers } = useDataContext();
    const fontScale = Math.round(PixelRatio.getFontScale() * 10) / 10;

    const iconMapping : any = {
        'menu-default.png': defaultIcon,
        'menu-forms.png': formIcon,
        'menu-resources.png': resourcesIcon,
        'menu-skills-maint.png': skillsMaintIcon,
        'menu-training.png': trainingIcon,
        'menu-all-services.png': allServicesIcon,
        'menu-annual-inventory-check.png': annualInventoryCheckIcon,
        'menu-id-card-replacement.png': idCardReplacementIcon,
        'menu-maintenance.png': maintenanceIcon,
        'menu-manage-members2.png': manageMembersIcon,
        'menu-membership-deregistration.png': membershipDeregistrationIcon,
        'menu-uniform-replacement.png': uniformReplacementIcon,
        'menu-unit-details.png': unitDetailsIcon,
        'menu-practical-training-registration.png': practicalTrainingRegistrationIcon,
        'menu-equipment-repair.png' : menuEquipmentRepair
    };

    //map callbacks to the targetPaths
    const targetMapping: any = {
        "/all-services": (TargetPath: string, Title: string) => {
            screenFlowModule.onNavigateToScreen('AllServicesListScreen', { title: Title });
        },
        "/cfu-unit-details": (TargetPath: string, Title: string) => {
            screenFlowModule.onNavigateToScreen('MyUnitDetailsScreen', { title: Title });
        },
        "/cfu-manage-members": async (TargetPath: string, Title: string) => {
            setCurrentProfile('MyMembers');


            //if we are vol admin, we will clear the filters and reset the org unit data before navigating there
            if (currentUser[0].VolAdmin) {
                appContext.setShowBusyIndicator(true);
                appContext.setShowDialog(true);

                setVolAdminMembersSearchFilter({
                    withdrawn: false,
                    unit: '',
                    station: '',
                    lastName: '',
                    firstName: '',
                    pernr: ''
                });

                const plans = volAdminLastSelectedOrgUnit[0].Zzplans;

                try {
                    const results = await dataHandlerModule.batchGet(`Members?$skip=0&$top=100&$filter=Zzplans%20eq%20%27${plans}%27%20and%20InclWithdrawn%20eq%20false`, 'Z_VOL_MANAGER_SRV', 'Members');
                    setOrgUnitTeamMembers(results.responseBody.d.results);
                    appContext.setShowDialog(false);
                } catch (error) {
                    appContext.setShowDialog(false);
                    screenFlowModule.onNavigateToScreen('ErrorPage', error);
                }
            }

            screenFlowModule.onNavigateToScreen('MyMembers', { title: Title });
        },
        "/cfu-training": (TargetPath: string, Title: string) => {
            screenFlowModule.onNavigateToScreen('TrainingMain', { title: Title });
        },
        "/cfu-resources": (TargetPath: string, Title: string) => {
            screenFlowModule.onNavigateToScreen('Resources', { title: Title });
        },
        "/cfu-skills-maint": (TargetPath: string, Title: string) => {
            screenFlowModule.onNavigateToScreen('SkillsMaintenancePage', { title: Title });
        },
        "/forms-launcher": (TargetPath: string, Title: string) => {
            screenFlowModule.onNavigateToScreen('FormServicePage', { title: Title, formLaunchId: TargetPath.substring(TargetPath.lastIndexOf("/") + 1) });
        }
    }

    const slashCount = (path: string) => {
        const regex = /(?<!:)\//g;
        const matches = path.match(regex)
        return matches ? matches.length : 0
    }

    const Tile = ({ service, style }: { service: any, style?: StyleProp<ViewStyle> }) => {
        const { IconFilename, TargetPath, Title } = service
        const imageIcon = iconMapping[IconFilename] ? iconMapping[IconFilename] : defaultIcon;
        let path = TargetPath;
        if (slashCount(TargetPath) > 1) {
            //we have a path param (i.e /path/param)
            path = TargetPath.substring(0, TargetPath.lastIndexOf("/"))
        }
        const callBack = targetMapping[path] ? targetMapping[path] : () => {
            const error = {
                isAxiosError: false,
                message: `Missing callback for service ${Title} with target ${TargetPath}`
            }

            screenFlowModule.onNavigateToScreen('ErrorPage', error);
        }

        return (
            <Pressable onPress={() => callBack(TargetPath, Title)} style={({ pressed }) => [pressed ? { opacity: 0.6 } : { opacity: 1 }, style, { aspectRatio: 0.75, alignItems: "center", justifyContent: "flex-start" }]}>
                <View style={{ backgroundColor: "#fff", width: "100%", aspectRatio: 1, borderRadius: 10, justifyContent: "center", alignItems: "center" }}>
                    <Image
                        source={imageIcon}
                        style={{ height: "50%", width: "50%", resizeMode: 'contain' }}
                    />
                </View>
                <CustomText variant='bodyMedium' style={{ marginTop: 5, marginHorizontal: 5, textAlign: 'center' }}>{Title}</CustomText>
            </Pressable>
        )
    }

    //if the fontScale is large, then we do two columns, and maximum 8 services
    const maxServices = fontScale >= 1.3 ? 8 : 9
    const columns = fontScale >= 1.3 ? 2 : 3

    const ServiceTiles = []
    for (let i = 0; i < services.length; i++) {
        const service = services[i]
        if (i > maxServices - 2 && services.length > maxServices) {
            //we only want a maximum of 9 services
            ServiceTiles.push(<Tile key={`service_${service.MenuId}`} service={{ IconFilename: "menu-all-services.png", TargetPath: "/all-services", Title: "All Services" }} />)
            break;
        } else {
            ServiceTiles.push(<Tile key={`service_${service.MenuId}`} service={service} />)
        }
    }

    return (
        <View style={{ marginVertical: 20, width: "100%" }}>
            <CustomText style={{ marginVertical: 15, color: theme.colors.primary, paddingHorizontal: 15 }} variant='titleLargeBold'>Keep your info up to date</CustomText>
            <CustomGrid columns={columns} style={{ gap: 10, rowGap: 20 }}>
                {ServiceTiles}
            </CustomGrid>
        </View>
    )
}

const ContactUs = () => {
    const theme = useTheme();
    const fontScale = Math.round(PixelRatio.getFontScale() * 10) / 10;
    //increase the margin and padding based on fontScale
    const verticalMargin = fontScale >= 1.3 ? 40 : 20
    const horizontalPadding = fontScale >= 1.3 ? 30 : 15
    return (
        <View style={{ marginVertical: verticalMargin, paddingHorizontal: horizontalPadding }}>
            <CustomText style={{ marginVertical: 15, color: theme.colors.primary }} variant='titleLargeBold'>Contact us</CustomText>
            <CustomText style={{ marginVertical: 15 }} variant='bodyMedium'>If you need assistance please reach out to the CFU Team</CustomText>
            <View style={{ paddingVertical: 10, paddingHorizontal: 15, backgroundColor: '#fff', ...GlobalStyles.globalBorderRadius }}>
                <Pressable style={({ pressed }) => [pressed ? { opacity: 0.6 } : { opacity: 1 }, { flexDirection: 'row', alignItems: 'center', paddingVertical: 16 }]} onPress={() => Linking.openURL(`tel:1300 238 238`)}>
                    <LucideIcons.Phone style={{ marginRight: 20 }} color={theme.colors.primary} />
                    <CustomText variant='bodyLarge'>1300 CFU CFU (1300 238 238)</CustomText>
                </Pressable>
                <Pressable style={({ pressed }) => [pressed ? { opacity: 0.6 } : { opacity: 1 }, { flexDirection: 'row', alignItems: 'center', paddingVertical: 16 }]} onPress={() => Linking.openURL(`mailTo:cfu@fire.nsw.gov.au`)}>
                    <LucideIcons.Mail style={{ marginRight: 20 }} color={theme.colors.primary} />
                    <CustomText variant='bodyLarge'>cfu@fire.nsw.gov.au</CustomText>
                </Pressable>
                <Pressable style={({ pressed }) => [pressed ? { opacity: 0.6 } : { opacity: 1 }, { flexDirection: 'row', alignItems: 'center', paddingVertical: 16 }]} onPress={() => screenFlowModule.onNavigateToScreen("FeedbackScreen")}>
                    <LucideIcons.Heart style={{ marginRight: 20 }} color={theme.colors.primary} />
                    <CustomText variant='bodyLarge'>Rate this app</CustomText>
                </Pressable>
            </View>
        </View>
    )
}


const HomePage = () => {
    const theme = useTheme();
    const user = useDataContext().currentUser[0];
    const [showDialog, setShowDialog] = useState(false);
    const [inHome, setInHome] = useState(true)
    const appContext = useAppContext();
    const fontScale = Math.round(PixelRatio.getFontScale() * 10) / 10;

    const bottomPadding = fontScale >= 1.3 ? 48 : 24

    useFocusEffect(
        useCallback(() => {
            setInHome(true)
            return () => {
                setInHome(false)
            };
        }, [])
    );


    return (
        <ScrollView contentContainerStyle={{ paddingBottom: `${bottomPadding}%`, backgroundColor: theme.colors.background }}>
            <StatusBar style={inHome ? 'light':'dark'}/>
            <Portal>
                <Dialog visible={showDialog} theme={{ colors: { primary: 'green' } }} onDismiss={() => setShowDialog(!showDialog)}>
                    <Dialog.Content>
                        <View style={{flexDirection: 'row', alignItems: 'center'}}>
                            <LucideIcons.LogOut size={30} color={theme.colors.primary}/>
                            <CustomText style={{marginLeft: 20}} variant='bodyLarge'>
                                Are you sure you want to log out?
                            </CustomText>
                        </View>
                    </Dialog.Content>
                    <Dialog.Actions>
                        <Button maxFontSizeMultiplier={1.5} onPress={() => setShowDialog(false)} textColor={theme.colors.secondary}>Cancel</Button>
                        <Button 
                            onPress={() => {
                                setShowDialog(false);
                                authModule.onLogOut()
                            }} 
                            textColor={theme.colors.secondary} 
                        >
                            Log Out
                        </Button>
                    </Dialog.Actions>
                </Dialog>
            </Portal>
            <View style={{ height: "18%" }}>
                <View style={{ flex: 1, backgroundColor: theme.colors.background, paddingBottom: 10 }}>
                    <ImageBackground imageStyle={{ top: "-20%", }} source={headerBg}
                        style={{
                            position: "relative",
                            flex: 1,
                            backgroundColor: theme.colors.primary,
                            flexDirection: 'row',
                            alignItems: "flex-end",
                            paddingHorizontal: 20,
                            paddingVertical: 20,
                            boxShadow: "0px 1px 5px rgba(0, 0, 0, 0.6)",
                            overflow: "hidden"
                        }}>
                            
                        <CustomText variant='displaySmallBold' style={{ color: theme.colors.background, marginHorizontal: "auto" }}>Hi {user.Vorna}</CustomText>
                        <View style={{ position: "absolute", right: 0, top: Constants.statusBarHeight }}>
                            <IconButton icon={() => <LucideIcons.LogOut color={theme.colors.background} size={30} />} size={30}
                                style={{ backgroundColor: "rgba(188, 21, 0, 0.5)" }}
                                onPress={async () => {
                                    //show them a warning dialog for logging out
                                    setShowDialog(true);
                                }} />
                        </View>
                    </ImageBackground>
                </View>
            </View>
            <View style={[GlobalStyles.pageContainer]}>
                <Services />
                <ContactUs />
            </View>
        </ScrollView>
    )
}

export default HomePage;