...

    const pinCopy = useRef('');
    const [pin, setPin] = useState('');
    const [attempts, setAttempts] = useState(3);
    const [errorText, setErrorText] = useState('');
    const [hasPin, setHasPin] = useState(false);
    const [pinTitle, setPinTitle] = useState('Set New Pin');
    const [authSuccess, setAuthSuccess] = useState(false)
    const [showCurtain, setShowCurtain] = useState(false)
    const theme = useTheme();

    const curtainFade = useRef(new Animated.Value(1)).current;
    const curtainFadeIn = () => {
...
    useEffect(() => {
        async function onMount() {
            const pin = await SecureStore.getItemAsync('pin');

            if (pin) {
                setHasPin(true);
                setPinTitle('Enter Pin')
            }

            //if no pin, make then set a pin first
            if (!pin) {
                return;
            }
...
                                    }
                                }
                                else {
                                    //we're setting up the pin
                                    //copy is empty, save the current pin to copy and wipe the pin clean to start again
                                    if (pinCopy.current === '') {
                                        setPinTitle('Confirm Set Pin');
                                        pinCopy.current = text;
                                        setPin('');
                                    }
                                    else {
                                        //check to see if the pin match
                                        if (pinCopy.current === text) {
...
