...
    let lastTimePressed: any = null;

    const OktaLogin = () => {
        return (
            <View style={{paddingTop: 30, flex: 1}}>
                <View style={{marginBottom: 20, alignItems: 'center'}}>
                    <CustomText variant='titleMediumBold'>Lets get started</CustomText>
                </View>
                <Button
                    maxFontSizeMultiplier={1.5}
                    buttonColor={theme.colors.primary}
                    textColor={theme.colors.background}
                    mode='elevated'
...
                            .catch((error) => {
                                appContext.setShowBusyIndicator(false);
                                appContext.setShowDialog(false);
                                screenFlowModule.onNavigateToScreen('ErrorPage', error);
                            })
                    }}
                >Login</Button>
            </View>
        )
    }

    return (
        <ImageBackground source={BackgroundImage} style={GlobalStyles.backgroundImage}>
...
